Initial structure for the ECommerce

--- a/src/MinimalApiWithPowerAutomate.API/MinimalApiWithPowerAutomate.API.csproj
+++ b/src/MinimalApiWithPowerAutomate.API/MinimalApiWithPowerAutomate.API.csproj
@@ -1,17 +1,33 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-MinimalApiWithPowerAutomate.API-010D387E-182F-4429-A593-60B0DE92505A</UserSecretsId>
+    <ApplicationInsightsResourceId>/subscriptions/7085cbbe-c19b-45ec-83fa-48dbc25e89dd/resourceGroups/DotNETConf2022/providers/microsoft.insights/components/dotnetconf2022api</ApplicationInsightsResourceId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.1" />
-    <PackageReference Include="Microsoft.Identity.Web" Version="1.16.0"/>
+	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+	  <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.20.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="1.16.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
+	  <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+	  <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.6.1" />
+  </ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\MinimalApiWithPowerAutomate.API.BusinessLayer\MinimalApiWithPowerAutomate.API.BusinessLayer.csproj" />
+	</ItemGroup>
+
+
+	<ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
