--- a/src/MinimalApiWithPowerAutomate.API/appsettings.json
+++ b/src/MinimalApiWithPowerAutomate.API/appsettings.json
@@ -1,15 +1,9 @@
 {
-/*
-The following identity settings need to be configured
-before the project can be successfully executed.
-For more info see https://aka.ms/dotnet-template-ms-identity-platform
-*/
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "qualified.domain.name",
     "TenantId": "22222222-2222-2222-2222-222222222222",
     "ClientId": "11111111-1111-1111-11111111111111111",
-
     "Scopes": "access_as_user",
     "CallbackPath": "/signin-oidc"
   },
@@ -19,5 +13,60 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": ""
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.MSSqlServer"
+    ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Debug"
+      },
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "DefaultConnection",
+          "tableName": "Logs",
+          "columnOptionsSection": {
+            "addStandardColumns": [
+              "LogEvent"
+            ],
+            "removeStandardColumns": [
+              "MessageTemplate",
+              "Properties"
+            ],
+            "timeStamp": {
+              "columnName": "Timestamp",
+              "convertToUtc": true
+            }
+          },
+          "autoCreateSqlTable": true,
+          "restrictedToMinimumLevel": "Information"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext"
+    ]
+  }
 }
