--- a/src/MinimalApiWithPowerAutomate.API/appsettings.json
+++ b/src/MinimalApiWithPowerAutomate.API/appsettings.json
@@ -1,11 +1,12 @@
 {
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "Domain": "qualified.domain.name",
-    "TenantId": "22222222-2222-2222-2222-222222222222",
-    "ClientId": "11111111-1111-1111-11111111111111111",
-    "Scopes": "access_as_user",
-    "CallbackPath": "/signin-oidc"
+    "Domain": "domain.onmicrosoft.com",
+    "TenantId": "",
+    "ClientId": "",
+    "Scopes": "",
+    "CallbackPath": "/signin-oidc",
+    "SignedOutCallbackPath": "/signout-callback-oidc"
   },
   "Logging": {
     "LogLevel": {
