--- a/src/MinimalApiWithPowerAutomate.API.DataAccessLayer/MinimalApiWithPowerAutomate.API.DataAccessLayer.csproj
+++ b/src/MinimalApiWithPowerAutomate.API.DataAccessLayer/MinimalApiWithPowerAutomate.API.DataAccessLayer.csproj
@@ -7,8 +7,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.3" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
 	</ItemGroup>
 
 
